--- a/style.css
+++ b/style.css
@@ -346,7 +346,15 @@ pre {
 	overflow: auto;
 	padding: 0.75em 1.625em;
 }
-code, kbd, samp, var {
+pre code {
+	font: 13px Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
+}
+:not(pre) > code {
+	background: #f2f2f2;
+	font: 13px Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
+	padding: .125rem .3125rem .0625rem;
+}
+kbd, samp, var {
 	font: 13px Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 }
 abbr, acronym, dfn {
